--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,6 +1,7 @@
 .about {
     background: $color-background;
-    padding: 20rem 3rem;
+    padding: 20vh 1vw 10vh 1vw;
+    height: 90vh;
 
     &__content{
     //     margin: 2rem 2rem;
