--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -1,6 +1,6 @@
 .skills{
     background: $color-background;
-    padding: 18rem 3rem;
+    padding: 13rem 3rem 0 3rem;
 
     display: grid;
     grid-template-columns: repeat(8, minmax(10rem, 1fr));
